----------------------------------------------------------------
-- wren gayle romano <wren@community.haskell.org>   ~ 2021.10.16
----------------------------------------------------------------

-- Cabal >=1.10 is required by Hackage.
Cabal-Version:  >= 1.10
Build-Type:     Simple

Name:           pointless-fun
Version:        1.1.0.7
Stability:      provisional
Homepage:       http://wrengr.org
Author:         wren gayle romano, Matt Hellige
Maintainer:     wren@cpan.org
Copyright:      Copyright (c) 2009--2021 wren gayle romano
License:        BSD3
License-File:   LICENSE

Category:       Combinators, Composition, Utils
Synopsis:       Some common point-free combinators.
Description:    Some common point-free combinators.

Extra-source-files:
    README.md, CHANGELOG

-- This should work as far back as GHC 6.12.1, but we don't verify that by CI.
-- <https://github.com/wrengr/pointless-fun/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1

----------------------------------------------------------------
Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/pointless-fun.git

----------------------------------------------------------------
Flag base4
    Default:     True
    Description: base-4.0 emits "Prelude deprecated" messages in
                 order to get people to be explicit about which
                 version of base they use.

-- TODO: add flags for compiling against haskell98 or haskell2010
-- instead of base?

----------------------------------------------------------------
Library
    Default-Language: Haskell2010
    Hs-Source-Dirs:  src
    Exposed-Modules: Data.Function.Pointless
    
    if flag(base4)
        Build-Depends: base >= 4 && < 5
    else
        Build-Depends: base < 4

----------------------------------------------------------------
----------------------------------------------------------- fin.
