Cabal-Version:  2.2
-- Cabal >=2.2 is required for:
--    <https://cabal.readthedocs.io/en/latest/cabal-package.html#common-stanzas>
-- Since 2.1, the Cabal-Version must be the absolutely first thing
-- in the file, even before comments.  Also, no longer uses ">=".
--    <https://github.com/haskell/cabal/issues/4899>

----------------------------------------------------------------
-- wren gayle romano <wren@cpan.org>                ~ 2024-08-29
----------------------------------------------------------------

Name:           pointless-fun
Version:        1.1.0.12
Build-Type:     Simple
Stability:      provisional
Homepage:       https://wrengr.org/software/hackage.html
Bug-Reports:    https://github.com/wrengr/pointless-fun/issues
Author:         wren gayle romano, Matt Hellige
Maintainer:     wren@cpan.org
Copyright:      2009–2024 wren romano
-- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
License:        BSD-3-Clause
License-File:   LICENSE

Category:       Combinators, Composition, Utils
Synopsis:       Some common point-free combinators.
Description:    Some common point-free combinators.

Extra-source-files:
    README.md, CHANGELOG

-- This should work as far back as GHC 6.12.1, but we don't verify that by CI.
-- <https://github.com/wrengr/pointless-fun/actions?query=workflow%3Aci>
Tested-With:
    GHC ==8.0.2,
    GHC ==8.2.2,
    GHC ==8.4.4,
    GHC ==8.6.5,
    GHC ==8.8.4,
    GHC ==8.10.3,
    GHC ==9.0.1,
    GHC ==9.2.4,
    GHC ==9.4.8,
    GHC ==9.6.5,
    GHC ==9.8.2,
    GHC ==9.10.1

----------------------------------------------------------------
Source-Repository head
    Type:     git
    Location: https://github.com/wrengr/pointless-fun.git

----------------------------------------------------------------
Library
    Default-Language: Haskell98
    Hs-Source-Dirs:  src
    Exposed-Modules: Data.Function.Pointless
    Build-Depends: base >= 4 && < 5

----------------------------------------------------------------
----------------------------------------------------------- fin.
